[project]
name = "aml2026-group-09"
version = "0.1.0"
description = "Brain Tumour Classification — AML 2026 Group 09"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "ipykernel>=6.0.0",
]
